--- a/inf8810.tex
+++ b/inf8810.tex
@@ -44,7 +44,7 @@
 % Document starts
 \begin{document}
 % Title portion
-\title{Reproducibility Crisis in Computer Science}
+\title{Reproducibility Crisis with Computer Science}
 %\titlenote{We can add a note to the title}
 
 \author{Candidate Number -- 2}
