--- a/bibliography.bib
+++ b/bibliography.bib
@@ -504,3 +504,73 @@ isbn      = {978-82-7682-056-0}
 	year={1942},
 	publisher={New York}
 }
+
+@inproceedings{gundersen2018state,
+	title={State of the art: Reproducibility in artificial intelligence},
+	author={Gundersen, Odd Erik and Kjensmo, Sigbj{\o}rn},
+	booktitle={Thirty-Second AAAI Conference on Artificial Intelligence},
+	year={2018}
+}
+
+@article{begley2012drug,
+	title={Drug development: Raise standards for preclinical cancer research},
+	author={Begley, C Glenn and Ellis, Lee M},
+	journal={Nature},
+	volume={483},
+	number={7391},
+	pages={531},
+	year={2012},
+	publisher={Nature Publishing Group}
+}
+
+@article{begley2015reproducibility,
+	title={Reproducibility in science: improving the standard for basic and preclinical research},
+	author={Begley, C Glenn and Ioannidis, John PA},
+	journal={Circulation research},
+	volume={116},
+	number={1},
+	pages={116--126},
+	year={2015},
+	publisher={Am Heart Assoc}
+}
+
+@article{prinz2011believe,
+	title={Believe it or not: how much can we rely on published data on potential drug targets?},
+	author={Prinz, Florian and Schlange, Thomas and Asadullah, Khusru},
+	journal={Nature reviews Drug discovery},
+	volume={10},
+	number={9},
+	pages={712},
+	year={2011},
+	publisher={Nature Publishing Group}
+}
+
+@article{aarts2016reproducibility,
+	author = {Aarts, Alexander and Anderson, Joanna and Anderson, Christopher and Attridge, Peter and Attwood, Angela and Axt, Jordan and Babel, Molly and Bahnik, Stepan and Baranski, Erica and Barnett-Cowan, Michael and Bartmess, Elizabeth and Beer, Jennifer and Bell, Raoul and Bentley, Heather and Beyan, Leah and Binion, Grace and Borsboom, Denny and Bosch, Annick and Bosco, Frank and Penuliar, Mike},
+	year = {2015},
+	month = {08},
+	pages = {},
+	title = {Estimating the Reproducibility of Psychological Science},
+	volume = {349},
+	journal = {Science},
+	doi = {10.1126/science.aac4716}
+}
+
+@article{Collberg:2016:RCS:2897191.2812803,
+	author = {Collberg, Christian and Proebsting, Todd A.},
+	title = {Repeatability in Computer Systems Research},
+	journal = {Commun. ACM},
+	issue_date = {March 2016},
+	volume = {59},
+	number = {3},
+	month = feb,
+	year = {2016},
+	issn = {0001-0782},
+	pages = {62--69},
+	numpages = {8},
+	url = {http://doi.acm.org/10.1145/2812803},
+	doi = {10.1145/2812803},
+	acmid = {2812803},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+} 
