--- a/inf8810.tex
+++ b/inf8810.tex
@@ -3,6 +3,7 @@
 
 \usepackage[ruled]{algorithm2e} % For algorithms
 \usepackage[perpage]{footmisc}
+\usepackage[printonlyused]{acronym}
 \renewcommand{\algorithmcfname}{ALGORITHM}
 \SetAlFnt{\small}
 \SetAlCapFnt{\small}
@@ -22,8 +23,10 @@
 
 %\acmBadgeR[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
 %\acmBadgeL[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
-
-
+\acrodef{ai}[AI]{Artificial Intelligence}
+\acrodef{ml}[ML]{Machine Learning}
+\acrodef{cs}[CS]{Computer Science}
+\acrodef{acm}[ACM]{Association for Computing Machinery}
 % Copyright
 %\setcopyright{acmcopyright}
 %\setcopyright{acmlicensed}
@@ -49,7 +52,7 @@
 
 \author{Candidate Number -- 2}
 %\authornote{This is the corresponding author}
-\orcid{0000-0003-3965-3271}
+\orcid{}
 \affiliation{%
   \institution{Universitetet i Troms\o, The Arctic University of Norway.}
 %  \streetaddress{Hansine Hansens veg 54}
