--- a/content.tex
+++ b/content.tex
@@ -50,7 +50,7 @@ and open research data when it comes to the scope of making good science.
 %making knowledge freely available for everyone, and enabling science to be accessible for citizens.
 %
 Information technology and big data digitalization together with statistical inference,
-open up a complete new way of doing research, where is possible to train machines
+open up a complete new way of doing research, where it is possible to train machines
 and algorithms to solve particular tasks without being given specific instructions; the so called
 \ac{ml}.
 
