--- a/content.tex
+++ b/content.tex
@@ -7,36 +7,47 @@ of people could have access to it.
 Many scientists, including Galileo, Newton, Kepler, and Hooke, made their discoveries into
 something they could profit, and often papers were even encoded in anagrams.
 Following this closed science logic, it was difficult
-to identify ownership and priority of scientific discoveries, like for instance the
+to identify scientific priority of research discoveries, like for instance the
 debate on whom first discovered calculus between Leibniz and Newton.
 
-In modern times, scientific research is moving towards openness and free knowledge,
-and ownership and priority issues are not the main concern anymore. However,
-there are still research data, journals, and paper which are not accessible to all.
-Data is not open due privacy and secrecy by for-profit organizations, and
-papers are not open because they are published in pay-walled journals.
-Merton arguments in favor of open science are
-that, knowledge-creation is more efficient if scientists work together, and
-it is morally binding on the professional scientist\,\cite{merton1942science}.
+In modern times, scientific research is moving towards openness,
+and technology has solved scientific priority issue to a certain extent.
+Many scientists are in favor of open science, for instance
+Merton argues that knowledge-creation is more efficient if scientists work together, and
+it is morally binding on a professional scientist\,\cite{merton1942science}.
+However, there exists research data, journals, and papers which are not openly accessible.
+In some cases research data is not available due to privacy concerns.
+Research data collected by for-profit organizations is held in secrecy, for
+safeguarding commercial interests.
+Furthermore, pay-walled journals limit access of scientific publications.
+All this hinders openness in propagation of science.
 
-Besides seeking knowledge and discoveries, science needs also to constantly proof itself
-to be right, hence it needs to be reproducible. If scientists such as Newton, Kepler or Galileo,
-could guarantee the reproducibility of their discoveries by mathematical proofs, all included in one single paper,
-in modern science, and especially after the advent of computers and information technology,
-it is not possible anymore. The complexity and amount of data used
-to formulate theorems and proofs has drastically changed the way of doing research,
-having manuscripts, source code, and research data, as a fundamental part of the whole scientific discovery,
-in order to have a reproducible experiment.
-
-Being our field of research \ac{cs}, and in particular
-application of \ac{ai} on big data in blockchain technology and cryptocurrencies,
-we want to enhance the main challenges of doing good scientific
-research when research data and source code are not openly accessible.
-Excessively closed research data can lead to reproducibility issues,
-especially when \ac{ai} and big data analysis are involved.
+%go from reproducibility to physics then cs and then machine learning, and stick with it!
+Besides seeking knowledge, science needs also to constantly proof itself
+to be right, hence it needs to be \emph{reproducible}. 
+In sixteenth and seventeenth centuries, scientists such as Newton or Galileo could guarantee
+reproducibility in physics, by using mathematical formulas summarized in papers.
 %
-We will show in this manuscript the importance of open source code
-and open research data when it comes to the scope of making good science.
+After the advent of information technology in last decades of twentieth century, to guarantee reproducibility,
+disciplines such as \ac{cs} required, in addition to mathematics, the logic or abstraction
+which explains algorithms (\emph{pseudo code}).
+
+In twenty-first century, a specific branch of \ac{cs}, called \ac{ai}, developed
+new techniques based on big data analysis and statistical inference,
+where it is possible to train machines and algorithms to solve particular tasks without being
+given specific instructions. The latter is also known as \ac{ml}.
+%
+With \ac{ml}, the complexity and amount of data used
+to formulate theorems and proofs has drastically changed the way of doing research.
+In \ac{ml}, mathematical formulas and pseudo code are not
+enough to guarantee reproducibility, and research data, source code,
+and model's set up became fundamental information in order to conduct good science.
+
+In this manuscript we want to enhance the main challenges related to reproducibility
+in \ac{ml}, and how much importance should be given to open source
+code and open research data, in order to perform good science.
+Excessively closed research data can lead to reproducibility issues,
+especially when big data analysis is involved.
 
 \section{Open Data and Source Code}
 %Open science is the movement to make scientific research (i.e. data, software, publications)
