--- a/bibliography.bib
+++ b/bibliography.bib
@@ -574,3 +574,24 @@ isbn      = {978-82-7682-056-0}
 	publisher = {ACM},
 	address = {New York, NY, USA},
 } 
+
+@article{mjolsness2001machine,
+	title={Machine learning for science: state of the art and future prospects},
+	author={Mjolsness, Eric and DeCoste, Dennis},
+	journal={science},
+	volume={293},
+	number={5537},
+	pages={2051--2055},
+	year={2001},
+	publisher={American Association for the Advancement of Science}
+}
+
+@article{anderson2008end,
+	title={The end of theory: The data deluge makes the scientific method obsolete},
+	author={Anderson, Chris},
+	journal={Wired magazine},
+	volume={16},
+	number={7},
+	pages={16--07},
+	year={2008}
+}
