--- a/content.tex
+++ b/content.tex
@@ -20,35 +20,36 @@ In some cases research data is not available due to privacy concerns.
 Research data collected by for-profit organizations is held in secrecy, for
 safeguarding commercial interests.
 Furthermore, pay-walled journals limit access of scientific publications.
-All this hinders openness in propagation of science.
+All this hinders the propagation of open science.
 
 %go from reproducibility to physics then cs and then machine learning, and stick with it!
 Besides seeking knowledge, science needs also to constantly proof itself
 to be right, hence it needs to be \emph{reproducible}. 
 In sixteenth and seventeenth centuries, scientists such as Newton or Galileo could guarantee
-reproducibility in physics, by using mathematical formulas summarized in papers.
+reproducibility in physics by using mathematical formulas.
 %
-After the advent of information technology in last decades of twentieth century, to guarantee reproducibility,
-disciplines such as \ac{cs} required, in addition to mathematics, the logic or abstraction
-which explains algorithms (\emph{pseudo code}).
+In the late twentieth century, in the field of \ac{cs},
+\emph{pseudo code}\footnote{pseudo code is the logic or abstraction which explains algorithms.}
+helped reproducibility.
 
-In twenty-first century, a specific branch of \ac{cs}, called \ac{ai}, developed
-new techniques based on big data analysis and statistical inference,
-where it is possible to train machines and algorithms to solve particular tasks without being
-given specific instructions. The latter is also known as \ac{ml}.
+In twenty-first century, \ac{ml} rapidly gained popularity\,\cite{mjolsness2001machine}.
+\ac{ml} relies on new techniques based on big data analysis and statistical inference.
+With \ac{ml} it is possible to train machines to solve particular tasks without being
+given specific instructions.
 %
-With \ac{ml}, the complexity and amount of data used
-to formulate theorems and proofs has drastically changed the way of doing research.
-In \ac{ml}, mathematical formulas and pseudo code are not
-enough to guarantee reproducibility, and research data, source code,
-and model's set up became fundamental information in order to conduct good science.
+\ac{ml} has drastically changed the way of doing research\,\cite{anderson2008end},
+so that mathematical formulas and pseudo code are not
+enough to guarantee reproducibility, while research data, source code,
+and model's set up, became fundamental information in order to reconstruct the
+same outcomes of an experiment.
 
 In this manuscript we want to enhance the main challenges related to reproducibility
-in \ac{ml}, and how much importance should be given to open source
+in \ac{ml}. More importance should be given to open source
 code and open research data, in order to perform good science.
 Excessively closed research data can lead to reproducibility issues,
 especially when big data analysis is involved.
 
+% you need to tune parameters
 \section{Open Data and Source Code}
 %Open science is the movement to make scientific research (i.e. data, software, publications)
 %accessible to all levels of an inquiring society, amateur or professional\,\cite{woelfle2011openscience}.
