--- a/bibliography.bib
+++ b/bibliography.bib
@@ -595,3 +595,10 @@ isbn      = {978-82-7682-056-0}
 	pages={16--07},
 	year={2008}
 }
+
+@article{birattari2004problem,
+	title={The problem of tuning metaheuristics as seen from a machine learning perspective},
+	author={Birattari, Mauro},
+	year={2004},
+	publisher={Universit{\'e} libre de Bruxelles}
+}
