--- a/bibliography.bib
+++ b/bibliography.bib
@@ -602,3 +602,41 @@ isbn      = {978-82-7682-056-0}
 	year={2004},
 	publisher={Universit{\'e} libre de Bruxelles}
 }
+
+@book{national2016principles,
+	title={Principles and obstacles for sharing data from environmental health research: Workshop summary},
+	author={National Academies of Sciences, Engineering, and Medicine and others},
+	year={2016},
+	publisher={National Academies Press}
+}
+
+@article{sanders2017transparency,
+	title={Transparency and openness in science},
+	author={Sanders, Jeremy and Blundy, Jon and Donaldson, Anne and Brown, Steve and Ivison, Rob and Padgett, Miles and Padian, Kevin and Rittinger, Katrin and Rowe, Kerry and Stace, Anthony and others},
+	journal={Royal Society open science},
+	volume={4},
+	number={1},
+	year={2017},
+	publisher={The Royal Society}
+}
+
+@article{jao2015involving,
+	title={Involving research stakeholders in developing policy on sharing public health research data in Kenya: views on fair process for informed consent, access oversight, and community engagement},
+	author={Jao, Irene and Kombe, Francis and Mwalukore, Salim and Bull, Susan and Parker, Michael and Kamuya, Dorcas and Molyneux, Sassy and Marsh, Vicki},
+	journal={Journal of Empirical Research on Human Research Ethics},
+	volume={10},
+	number={3},
+	pages={264--277},
+	year={2015},
+	publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{stuart2018practical,
+	title={Practical challenges for researchers in data sharing},
+	author={Stuart, David and Baynes, Grace and Hrynaszkiewicz, Iain and Allin, Katie and Penny, Dan and Lucraft, Mithu and Astell, Mathias},
+	journal={Springer Nat. https://doi. org/10.6084/m9. figsh are},
+	volume={59750},
+	number={11},
+	pages={v1},
+	year={2018}
+}
