--- a/inf8810.tex
+++ b/inf8810.tex
@@ -27,6 +27,8 @@
 \acrodef{ml}[ML]{Machine Learning}
 \acrodef{cs}[CS]{Computer Science}
 \acrodef{acm}[ACM]{Association for Computing Machinery}
+\acrodef{ijcai}[IJCAI]{International Joint Conferences on Artificial Intelligence Organization}
+\acrodef{aaai}[AAAI]{Association for the Advancement of Artificial Intelligence}
 % Copyright
 %\setcopyright{acmcopyright}
 %\setcopyright{acmlicensed}
